--- a/backend-flask/requirements.txt
+++ b/backend-flask/requirements.txt
@@ -7,4 +7,6 @@ opentelemetry-exporter-otlp-proto-http
 opentelemetry-instrumentation-flask 
 opentelemetry-instrumentation-requests
 
-watchtower
+aws-xray-sdk
+
+
