--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -18,6 +18,7 @@ tasks:
     command: |
       cd frontend-react-js/
       npm i
+      cd $THEIA_WORKSPACE_ROOT
 vscode:
   extensions:
     - 42Crunch.vscode-openapi
